tests/resources/assets/cluster_test_ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test
  labels:
    app.kubernetes.io/name: test
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: nginx1
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx1
            port:
              number: 80
  - host: nginx2
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx2
            port:
              number: 80
