tests/resources/assets/test-pod.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: nginx-test-pod
spec:
  containers:
  - name: nginx
    image: nginx
    imagePullPolicy: Always
    ports:
      - containerPort: 80
        protocol: TCP
    volumeMounts:
      - mountPath: /usr/share/nginx/html
        name: www-data
      - name: test-config
        mountPath: /etc/nginx/conf.d
  volumes:
  - name: www-data
    emptyDir: {}
  - name: test-config
    emptyDir: {}
